# RasMol

./: .gitignore  CMakeLists.txt  INSTALL  README.md  fix_command.py  fix_posix_v2.py  fix_unix.py  revert.py
.agents/skills/RasMol/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: RasMol-instincts.yaml
.claude/skills/RasMol/: SKILL.md
.codex/: AGENTS.md
.github/workflows/: cmake-multi-platform.yml
doc/: rasmol_tcl_review.txt
gui/tcltk/: rasmol_ui.tcl
scripts/: fix_posix.py  fix_posix_v3.py  fix_rastxt.py  fix_strings.py  fix_strings_v2.py  wrap_digittoint.py
src/: abstree.c  cif.c  cif_ctonum.c  command.c  gtkwin.c  infile.c  molecule.c  multiple.c  rasmol.c  rasmol.h  rastxt.c  vector.c  x11win.c
src/txt/: rasmol.h
warpings/tcl/: rasmol_tcl.c  rasmol_vtk.cpp
